manifests/bookinfo-mysql.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-db-v1
  namespace: bookinfo
  labels:
    app: reviews-db
    version: v1
spec:
  ports:
  - port: 3306
    name: tcp
  selector:
    app: reviews-db
    version: v1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reviews-db-v1
  namespace: bookinfo
  labels:
    app: reviews-db
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-db
      version: v1
  serviceName: reviews-db-v1
  template:
    metadata:
      labels:
        app: reviews-db
        version: v1
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.33
        imagePullPolicy: IfNotPresent
        args:
        - "--default-authentication-plugin"
        - "mysql_native_password"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: var-lib-mysql
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: var-lib-mysql
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: gp2
      resources:
        requests:
          storage: 1Gi
