manifests/bookinfo-reviews.yaml
#   Copyright 2023 hhiroshell@gmail.com
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    app: reviews
spec:
  selector:
    app: reviews
  ports:
  - name: http
    port: 9080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    app: reviews
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
      - name: reviews
        image: registry.gitlab.com/[GITLAB_ACCOUNT_NAME]/bookinfo-microservices/reviews:chap03
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: bookinfo-microservices-registry
